--- a/code/style.css
+++ b/code/style.css
@@ -174,7 +174,7 @@ strong{
 .two{
 
    
-    background-image: url(./assets/image/Vector2.png);
+    background-image: url(assets/image/Vector2.png);
     background-repeat: no-repeat; 
     background-size: cover;
  
