--- a/code/style.css
+++ b/code/style.css
@@ -179,7 +179,7 @@ strong{
 .two{
 
    
-    background-image: url(./assets/image/Background/Vector2.png);
+    background-image: url(../assets/image/Background/Vector2.png);
     background-repeat: no-repeat; 
     background-size: cover;
  
@@ -275,7 +275,7 @@ margin-top: 2%;
 
 
 .three{
-    background-image: url(assets/image/3.png);
+    background-image: url(../assets/image/3.png);
     background-repeat: no-repeat;
     background-size: cover;
 }   
@@ -568,7 +568,7 @@ footer a:hover{
 
     .menu-main{
 
-        background-image: url(assets/image/Background/Design-sans-titre.png);
+        background-image: url(../assets/image/Background/Design-sans-titre.png);
         background-repeat: no-repeat; 
         background-size: cover;
         height: auto;
