--- a/code/style.css
+++ b/code/style.css
@@ -179,7 +179,7 @@ strong{
 .two{
 
    
-    background-image: url(../assets/image/Background/Vector 2.png);
+    background-image: url(../assets/image/Background/Vector2.png);
     background-repeat: no-repeat; 
     background-size: cover;
  
