--- a/code/style.css
+++ b/code/style.css
@@ -68,6 +68,10 @@ header{
 .nav-bar-container{
     width:80%;
     font-size:1rem;
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    
 }
 
 .nav-barre{
