--- a/code/style-2.css
+++ b/code/style-2.css
@@ -477,6 +477,24 @@ form{
             height: auto;
             text-align: center;
         }
+
+        .header{
+            width: 35%
+        }
+
+        .nav-barre-container{
+            flex-direction: column;
+            width: 100%;
+        }
+
+        .nav-bar{
+            width:100% !important;
+        }
+
+
+
+
+        
         header button:hover{
             color: aliceblue;
             background-color: var(--nika);
