--- a/code/style.css
+++ b/code/style.css
@@ -888,6 +888,8 @@ footer a:hover{
         .nav-barre-container{
             flex-direction: column;
             width: 100%;
+            justify-content: center;
+            align-items: center;
         }
 
         .nav-bar{
