--- a/code/style.css
+++ b/code/style.css
@@ -886,6 +886,7 @@ footer a:hover{
         }
 
         .nav-barre-container{
+            display:flex;
             flex-direction: column;
             width: 100%;
             justify-content: center;
