--- a/code/style.css
+++ b/code/style.css
@@ -273,6 +273,12 @@ h3{
   
 }
 
+.pizzaLogo{
+
+    width: 30rem;
+
+}
+
 /* section pizza*/
 
 .image-pizza{
@@ -997,7 +1003,7 @@ footer a:hover{
             margin-top: 0;
             font-size: 3rem;
             PADDING-LEFT: 15%;
-}
+        }
 
 
         #down{
@@ -1019,7 +1025,13 @@ footer a:hover{
             font-size: 1.6rem;
             
         }
-        
+
+
+        .pizzaLogo{
+
+            width: 22rem;
+
+        }
         
 
         #down a{
