--- a/code/style.css
+++ b/code/style.css
@@ -854,7 +854,6 @@ footer a:hover{
 
 
 
-/*debut CSS politiques*/
 
 
 
@@ -1300,6 +1299,17 @@ footer a:hover{
            
             /* font-size: 1rem; */
         }
+
+
+        #moment{
+
+            width: 90%;
+            margin: 5%;
+            padding-left: 20%;
+            padding-right: 20%;
+        }
+
+        
         }
 
 
