--- a/code/style.css
+++ b/code/style.css
@@ -892,7 +892,7 @@ footer a:hover{
             width: 35%
         }
 
-        #nav-barre-container{
+        #nav-bar-container {
             display:flex;
             flex-direction: column !important;
             width: 100%;
